kubernetes/applications/media-stack/prowlarr/prowlarr-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prowlarr
  namespace: media
spec:
  selector:
    app: prowlarr
  ports:
  - port: 9696
    targetPort: 9696
  type: ClusterIP
